--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         }
 
         .menu-item img {
-            width: 300px;
-            height: 300px;
+            width: 100%;
+            height: auto;
             border-radius: 5px 5px 0 0;
         }
 
@@ -277,6 +277,12 @@
             padding: 20px;
             background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
         }
+
+        .menu-item {
+            /* ... existing styles ... */
+            width: 100%; /* Adjust this value as needed */
+            max-width: 300px; /* Set a maximum width */
+            margin: 10px auto;
 
         .menu-container {
             /* ... existing styles ... */
